# connline

./: .gitignore  Makefile.am  README  TODO  autogen.sh  boostrap-configure.sh  clean.sh  configure.ac  connline.pc.in
doc/: doxydoc.conf
include/: backend.h  connline.h  connman.h  data.h  dbus.h  efl.h  event.h  glib_loop.h  libevent.h  list.h  nm.h  private.h  utils.h  wicd.h
plugins/: connman.c  efl.c  glib.c  libevent.c  nm.c  wicd.c
src/: backend.c  connline.c  connman.c  dbus.c  efl.c  event.c  glib.c  libevent.c  list.c  nm.c  plugin.c  utils.c  wicd.c
test/: efl_test.c  glib_test.c  libevent_test.c  simple_efl_test.py  simple_glib_test.py
